# xmppbot

./: .gitmodules  CMakeLists.txt
.ci/: ubuntu_install.sh
.github/workflows/: ubuntu.yml
cmake/: LoadDefs.cmake  LoadQXmpp.cmake  QXmpp.cmake
script/: xmppbot.lua
src/xmppbot/: main.cpp  unixsocket.cpp  unixsocket.h  xmppbot.h  xmppbotlua.cpp  xmppbotlua.h  xmppbotluathread.cpp  xmppbotluathread.h  xmppsocket.cpp  xmppsocket.h
